<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.ktsnvt</groupId>
	<artifactId>kts-nvt</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>kts-nvt</name>
	<description>Projekat iz predmeta KTS-NVT</description>
	<properties>
		<java.version>11</java.version>
		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
		<sonar.projectKey>kts-nvt-backend</sonar.projectKey>
		<sonar.sources>src/main/java</sonar.sources>
		<sonar.tests>src/test/java</sonar.tests>
		<sonar.language>java</sonar.language>
		<sonar.binaries>target/classes</sonar.binaries>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.junit.reportsPath>target/surefire-reports</sonar.junit.reportsPath>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
<!--		<sonar.coverage.jacoco.xmlReportPaths>-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.AdminLayoutPageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.BartenderPageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.ChangePasswordPageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.ChefPageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.EmployeesPageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.LoginPageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.SectionsManagePageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.SuperUsersPageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.UpdateProfilePageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.e2e.tests.WaiterPageTest.xml,-->
<!--			target/surefire-reports/TEST-com.ktsnvt.ktsnvt.integration.controller.EmployeeControllerTest.xml-->

<!--		</sonar.coverage.jacoco.xmlReportPaths>-->
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>2.3.9</version>
		</dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>3.141.59</version>
		</dependency>
    </dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
<!--					<testFailureIgnore>true</testFailureIgnore>-->
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
<!--					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.7.0.1746</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.6</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>coverage</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>default-prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>default-report</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
<!--							<execution>-->
<!--								<id>default-check</id>-->
<!--								<goals>-->
<!--									<goal>check</goal>-->
<!--								</goals>-->
<!--							</execution>-->
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
